--- a/app/index.html
+++ b/app/index.html
@@ -3,12 +3,266 @@
 <head>
 	<meta charset="UTF-8">
 	<title>MCSS_1</title>
+	<meta name="description" content="Описание">
+	<meta name="author" content="Имя Автора">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<!-- Иконка сайта -->
+	<link rel="shortcut icon" type="images/png" href="images/logo.png">
+	<link rel="apple-touch-icon" href="images/favicon/apple-touch-icon.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png">
+  <!-- Стили -->
 	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<h1>Stapt MCSS_1</h1>
-	
+
+	<!-- Начало кода -->
+	<header class="head">
+		<div class="blackout">
+			<div class="container">
+				<h1 class="head__h1">
+					Заберите 20 советов по грамотной настройке <span class="red">Я</span>ндекс.Директ
+				</h1>
+				<p class="head__min">
+					22 страницы с пояснениями в pdf варианте (мини-книга)
+				</p>
+				<div class="button"><a href="#" class="head__link">Забрать бесплатно!</a></div>
+				<p class="head__discount">
+					(+) Дополнительная 50% Скидка на Обучающий Курс
+				</p>
+				<p class="head__yandex">
+					Получайте от 2 до 7 заявок в день, настроив правильно рекламу в Яндекс.Директ
+				</p>
+			</div>
+		</div>
+	</header>
+
+	<article class="">
+		<div class="container">
+			<section class="direct">
+				<h2 class="direct__h2">
+					Контекстная реклама в <span class="red">Я</span>ндекс.Директ
+				</h2>
+				<p class="direct__desc">
+					Замечательный инструмент, если им правильно пользоваться. Можно в разы увеличить продажи, а можно просто слить рекламный бюджет. Как настроить грамотно рекламу в Яндекс.Директ узнайте бесплатно из специального отчета!
+				</p>
+				<img src="img/direct.jpg" alt="Скриншот ркламы Яндекс.Директ" class="direct__img">
+				<div class="button"><a href="#" class="head__link">Купить!</a></div>
+			</section>
+
+			<section class="polza">
+				<h3 class="polza__h3">
+					Кому будет полезен данный файл?
+				</h3>
+				<p class="polza__desc">
+					Кому стоит прочитать pdf файл
+				</p>
+				<div class="clearfix">
+					<div class="polza__block">
+						<img src="img/polza1.png" alt="Бизнесменам" class="polza__img">
+						<h4 class="polza__h4">
+							Бизнесменам
+						</h4>
+						<p class="polza__p">
+							Если у вас есть бизнес, то вы узнаете стоит ли заботиться в контекстной рекламе о кликабельности
+						</p>
+					</div>
+					<div class="polza__block">
+						<img src="img/polza2.png" alt="Специалистам по рекламе" class="polza__img">
+						<h4 class="polza__h4">
+							Специалистам по рекламе
+						</h4>
+						<p class="polza__p">
+							Если вы настраивете рекламу на заказ, то в отчете содержатся советы, как ускорить создание рекламы
+						</p>
+					</div>
+					<div class="polza__block">
+						<img src="img/polza3.png" alt="Арбитражникам" class="polza__img">
+						<h4 class="polza__h4">
+							Арбитражникам
+						</h4>
+						<p class="polza__p">
+							Если вы перепродаете трафик, то отчет вам будет полезен для поиска новых ключей и увеличения трафика
+						</p>
+					</div>
+				</div>
+			</section>
+
+			<section class="rezult">
+				<h3 class="rezult__h3">
+					Что вы получите, когда заберете отчет?
+				</h3>
+				<div class="clearfix">
+					<div class="rezult__block">
+						<img src="img/result1.png" alt="20 советов" class="rezult__img">
+						<h4 class="rezult__h4">
+							20 советов
+						</h4>
+						<p class="rezult__p">
+							20 советов с пояснениями и скриншотами, как они повлияют на настройку рекламной кампании
+						</p>
+					</div>
+					<div class="rezult__block">
+						<img src="img/result2.png" alt="22 страницы текста" class="rezult__img">
+						<h4 class="rezult__h4">
+							22 страницы текста
+						</h4>
+						<p class="rezult__p">
+							22 страницы текста в pdf варианте, которые качественно повлияют на ваши рекламные кампании
+						</p>
+					</div>
+					<div class="rezult__block">
+						<img src="img/result3.png" alt="4600 слов" class="rezult__img">
+						<h4 class="rezult__h4">
+							4600 слов
+						</h4>
+						<p class="rezult__p">
+							4600 слов, после прочтения которых, вам станет понятно, как настраивать рекламную кампанию
+						</p>
+					</div>
+				</div>
+				<div class="button"><a href="#" class="head__link">Купить за 270 руб!</a></div>
+			</section>
+		</div>
+	</article>
+
+	<section class="time">
+		<div class="container__min">
+			<img src="img/box.png" alt="Обложка книги" class="time__img">
+			<h4 class="time__h4">
+				20 советов по настройке <span class="red">Я</span>ндекс.Директ
+			</h4>
+			<p class="time__p">
+				pdf файл на 22 страницах с пояснениями
+			</p>
+			<div class="time__count">Здесь будет таймер</div>
+			<div class="button"><a href="#" class="head__link">Купить за 270 руб!</a></div>
+		</div>
+	</section>
+
+	<section class="rew">
+		<div class="blackout">
+			<div class="container">
+				<h3 class="rew__h3">
+					Отзывы об авторе
+				</h3>
+				<p class="rew__desc">
+					Что говорят об авторе
+				</p>
+				<div class="clearfix">
+					<div class="rew__block">
+						<footer class="rew__foot">
+							<img src="img/client1.jpg" alt="Евгений Вергус">
+							<p class="rew__name">
+								Евгений Вергус
+							</p>
+						</footer>
+						<artical class="rew__text">
+							<p class="">
+								Отличная информация :) Я более двух лет в сети и многое знаю и достаточно зарабатываю, но Директ как-то обходил стороной. Пробовал, тестировал, проходил 2 курса, но то что я узал сегодня, это бесценная информация. Мне есть с чем сравнивать. Денис, огромное спасибо тебе :)
+							</p>
+						</artical>
+					</div>
+					<div class="rew__block">
+						<footer class="rew__foot">
+							<img src="img/client2.jpg" alt="Виолетта Марич">
+							<p class="rew__name">
+								Виолетта Марич
+							</p>
+						</footer>
+						<artical class="rew__text">
+							<p class="">
+								Денис, отлично! Новичкам везет - мои первые кампании принесли мне доход уже на второй день, а через полгода - начался слив бюджета. Хотя и курсы покупала, но ТАКОЙ информации ни на одном не было. БЛАГОДАРЮ!!!
+							</p>
+						</artical>
+					</div>
+					<div class="rew__block">
+						<footer class="rew__foot">
+							<img src="img/client3.jpg" alt="Александр Аксёнов">
+							<p class="rew__name">
+								Александр Аксёнов
+							</p>
+						</footer>
+						<artical class="rew__text">
+							<p class="">
+								Сегодня посмотрел запись второй вебинара. Это круто! Я считал, что знаю контекстную рекламу. По факту то, что я знал, сильно меньше того, что можно знать. Уже для себя многие фишки открыл. Спасибо! Жду сегодняшний эфир и его запись!
+							</p>
+						</artical>
+					</div>
+					<div class="rew__block">
+						<footer class="rew__foot">
+							<img src="img/client4.jpg" alt="Юлия Пономарева">
+							<p class="rew__name">
+								Юлия Пономарева
+							</p>
+						</footer>
+						<artical class="rew__text">
+							<p class="">
+								Я тоже неоднократно обучалась рекламе в Яндекс.Директ. И курсы были, и даже тренинг один. До сих пор не видела такого количества и качества материала по этой теме, как у Дениса. Просто БРАВО! Вчерашний урок меня вообще поразил. Вот так можно подбирать слова? А я бы раньше на это количество слов времени раз в 20-30 больше потратила. Словом, огромнейшее СПАСИБО!
+							</p>
+						</artical>
+					</div>
+				</div>
+				<div class="button"><a href="#" class="head__link">Купить за 270 руб!</a></div>
+			</div>
+		</div>
+	</section>
+
+	<aside class="aboutme">
+			<div class="container clearfix">
+				<img src="img/author.jpg" alt="Денис Герасимов" class="aboutme__img">
+				<h3 class="aboutme__h3">
+					Денис Герасимов
+				</h3>
+				<p class="aboutme__p">
+					Рассказывает о том, в чем прекрасно разбирается. В контексной рекламе. Практик. Сертифицированный специалист по Яндекс.Директ, Google AdWords и Google Analytics.
+				</p>
+				<p class="aboutme__p">
+					С контекстной рекламой подружился в 2009 году, но не с первого раза. В данный момент основной доход получает именно с контекстной рекламы, продвигая различные продукты и услуги в интернете.
+				</p>
+				<div class="button"><a href="#" class="head__link">Хочу познакомиться!</a></div>
+			</div>
+		</aside>	
+
+		<aside class="more">
+			<div class="container clearfix">
+				<div class="more__left">
+					<div class="vidres">
+						<iframe width="420" height="315" src="https://www.youtube.com/embed/uQvwoYoRT_E" frameborder="0" allowfullscreen></iframe>
+					</div>
+				</div>
+				<div class="more__right">
+					<h4 class="more__h4">
+						Еще про Дениса Герасимова
+					</h4>
+					<div class="button"><a href="#" class="head__link">Хочу познакомиться!</a></div>
+				</div>
+			</div>
+		</aside>
+
+		<footer class="foot">
+			<container class="clearfix">
+				<div class="foot__left">
+					<p class="foot__p">
+						info@rek9.ru 
+					</p>
+					<p class="foot__p">
+						2016. Все права защищены. ИП Герасимов Д.В. Казань
+					</p>
+				</div>
+				<div class="foot__right">
+					<p class="foot__p">
+						<a href="" class="">
+							Политика обработки персональных данных
+						</a>
+					</p>
+				</div>
+			</container>
+		</footer>
+	<!-- Конец кода -->
+
 	<script src="bower/jquery/jquery.js"></script>
 	<script src="js/main.js"></script>
 </body>
