--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,8 @@
 	<link rel="apple-touch-icon" href="images/favicon/apple-touch-icon.png">
 	<link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-touch-icon-72x72.png">
 	<link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-touch-icon-114x114.png">
+	<!-- Подключаем шрифт -->
+	<link href='https://fonts.googleapis.com/css?family=Roboto&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   <!-- Стили -->
 	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/main.css">
@@ -25,10 +27,10 @@
 				<h1 class="head__h1">
 					Заберите 20 советов по грамотной настройке <span class="red">Я</span>ндекс.Директ
 				</h1>
-				<p class="head__min">
+				<p class="head__desc">
 					22 страницы с пояснениями в pdf варианте (мини-книга)
 				</p>
-				<div class="button"><a href="#" class="head__link">Забрать бесплатно!</a></div>
+				<div class="button button_big"><a href="#" class="link link_big">Забрать бесплатно!</a></div>
 				<p class="head__discount">
 					(+) Дополнительная 50% Скидка на Обучающий Курс
 				</p>
