--- a/app/index.html
+++ b/app/index.html
@@ -51,8 +51,9 @@
 					Замечательный инструмент, если им правильно пользоваться. Можно в разы увеличить продажи, а можно просто слить рекламный бюджет. Как настроить грамотно рекламу в Яндекс.Директ узнайте бесплатно из специального отчета!
 				</p>
 				<img src="img/direct.jpg" alt="Скриншот ркламы Яндекс.Директ" class="direct__img">
-				<div class="button"><a href="#" class="head__link">Купить!</a></div>
 			</section>
+
+			<div class="button"><a href="#" class="link">Купить!</a></div>
 
 			<section class="polza">
 				<h3 class="polza__h3">
@@ -71,7 +72,7 @@
 							Если у вас есть бизнес, то вы узнаете стоит ли заботиться в контекстной рекламе о кликабельности
 						</p>
 					</div>
-					<div class="polza__block">
+					<div class="polza__block polza__block_m5">
 						<img src="img/polza2.png" alt="Специалистам по рекламе" class="polza__img">
 						<h4 class="polza__h4">
 							Специалистам по рекламе
@@ -106,7 +107,7 @@
 							20 советов с пояснениями и скриншотами, как они повлияют на настройку рекламной кампании
 						</p>
 					</div>
-					<div class="rezult__block">
+					<div class="rezult__block rezult__block_m5">
 						<img src="img/result2.png" alt="22 страницы текста" class="rezult__img">
 						<h4 class="rezult__h4">
 							22 страницы текста
@@ -125,13 +126,15 @@
 						</p>
 					</div>
 				</div>
-				<div class="button"><a href="#" class="head__link">Купить за 270 руб!</a></div>
 			</section>
+
+			<div class="button"><a href="#" class="link">Купить за 270 руб!</a></div>
+
 		</div>
 	</article>
 
 	<section class="time">
-		<div class="container__min">
+		<div class="container__min clearfix">
 			<img src="img/box.png" alt="Обложка книги" class="time__img">
 			<h4 class="time__h4">
 				20 советов по настройке <span class="red">Я</span>ндекс.Директ
@@ -139,8 +142,10 @@
 			<p class="time__p">
 				pdf файл на 22 страницах с пояснениями
 			</p>
-			<div class="time__count">Здесь будет таймер</div>
-			<div class="button"><a href="#" class="head__link">Купить за 270 руб!</a></div>
+			<div class="time__count">Здесь вставим таймер</div>
+			<p class="time__min">
+				Обычная цена <s>270 руб</s>. Сегодня <span class="bold">бесплатно</span>
+			</p>
 		</div>
 	</section>
 
