--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
 		</div>
 	</header>
 
-	<article class="">
+	<article class="whiteout">
 		<div class="container">
 			<section class="direct">
 				<h2 class="direct__h2">
@@ -149,8 +149,7 @@
 		</div>
 	</section>
 
-	<section class="rew">
-		<div class="blackout">
+	<section class="rew blackout">
 			<div class="container">
 				<h3 class="rew__h3">
 					Отзывы об авторе
@@ -159,62 +158,61 @@
 					Что говорят об авторе
 				</p>
 				<div class="clearfix">
-					<div class="rew__block">
+					<div class="rew__block rew__block_mr6">
 						<footer class="rew__foot">
-							<img src="img/client1.jpg" alt="Евгений Вергус">
+							<img class="rew__img" src="img/client1.jpg" alt="Евгений Вергус">
 							<p class="rew__name">
 								Евгений Вергус
 							</p>
 						</footer>
 						<artical class="rew__text">
-							<p class="">
+							<p class="rew__p">
 								Отличная информация :) Я более двух лет в сети и многое знаю и достаточно зарабатываю, но Директ как-то обходил стороной. Пробовал, тестировал, проходил 2 курса, но то что я узал сегодня, это бесценная информация. Мне есть с чем сравнивать. Денис, огромное спасибо тебе :)
 							</p>
 						</artical>
 					</div>
 					<div class="rew__block">
 						<footer class="rew__foot">
-							<img src="img/client2.jpg" alt="Виолетта Марич">
+							<img class="rew__img" src="img/client2.jpg" alt="Виолетта Марич">
 							<p class="rew__name">
 								Виолетта Марич
 							</p>
 						</footer>
 						<artical class="rew__text">
-							<p class="">
+							<p class="rew__p">
 								Денис, отлично! Новичкам везет - мои первые кампании принесли мне доход уже на второй день, а через полгода - начался слив бюджета. Хотя и курсы покупала, но ТАКОЙ информации ни на одном не было. БЛАГОДАРЮ!!!
 							</p>
 						</artical>
 					</div>
-					<div class="rew__block">
+					<div class="rew__block rew__block_mr6">
 						<footer class="rew__foot">
-							<img src="img/client3.jpg" alt="Александр Аксёнов">
+							<img class="rew__img" src="img/client3.jpg" alt="Александр Аксёнов">
 							<p class="rew__name">
 								Александр Аксёнов
 							</p>
 						</footer>
 						<artical class="rew__text">
-							<p class="">
+							<p class="rew__p">
 								Сегодня посмотрел запись второй вебинара. Это круто! Я считал, что знаю контекстную рекламу. По факту то, что я знал, сильно меньше того, что можно знать. Уже для себя многие фишки открыл. Спасибо! Жду сегодняшний эфир и его запись!
 							</p>
 						</artical>
 					</div>
 					<div class="rew__block">
 						<footer class="rew__foot">
-							<img src="img/client4.jpg" alt="Юлия Пономарева">
+							<img class="rew__img" src="img/client4.jpg" alt="Юлия Пономарева">
 							<p class="rew__name">
 								Юлия Пономарева
 							</p>
 						</footer>
 						<artical class="rew__text">
-							<p class="">
+							<p class="rew__p">
 								Я тоже неоднократно обучалась рекламе в Яндекс.Директ. И курсы были, и даже тренинг один. До сих пор не видела такого количества и качества материала по этой теме, как у Дениса. Просто БРАВО! Вчерашний урок меня вообще поразил. Вот так можно подбирать слова? А я бы раньше на это количество слов времени раз в 20-30 больше потратила. Словом, огромнейшее СПАСИБО!
 							</p>
 						</artical>
 					</div>
 				</div>
-				<div class="button"><a href="#" class="head__link">Купить за 270 руб!</a></div>
+				<div class="button"><a href="#" class="link">Купить за 270 руб!</a></div>
 			</div>
-		</div>
 	</section>
 
 	<aside class="aboutme">
@@ -229,7 +227,7 @@
 				<p class="aboutme__p">
 					С контекстной рекламой подружился в 2009 году, но не с первого раза. В данный момент основной доход получает именно с контекстной рекламы, продвигая различные продукты и услуги в интернете.
 				</p>
-				<div class="button"><a href="#" class="head__link">Хочу познакомиться!</a></div>
+				<div class="button"><a href="#" class="link">Хочу познакомиться!</a></div>
 			</div>
 		</aside>	
 
@@ -244,13 +242,13 @@
 					<h4 class="more__h4">
 						Еще про Дениса Герасимова
 					</h4>
-					<div class="button"><a href="#" class="head__link">Хочу познакомиться!</a></div>
+					<div class="button buuton_left"><a href="#" class="link">Хочу познакомиться!</a></div>
 				</div>
 			</div>
 		</aside>
 
 		<footer class="foot">
-			<container class="clearfix">
+			<div class="container clearfix">
 				<div class="foot__left">
 					<p class="foot__p">
 						info@rek9.ru 
@@ -266,7 +264,7 @@
 						</a>
 					</p>
 				</div>
-			</container>
+			</div>
 		</footer>
 	<!-- Конец кода -->
 
