--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,10 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
   <!-- Стили -->
 	<link rel="stylesheet" href="bower/normalize-css/normalize.css">
+	<!-- Remodal -->
+	<link rel="stylesheet" href="remodal/remodal.css">
+	<link rel="stylesheet" href="remodal/remodal-default-theme.css">
+	<!-- My Style -->
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -30,7 +34,7 @@
 				<p class="head__desc">
 					22 страницы с пояснениями в pdf варианте (мини-книга)
 				</p>
-				<div class="button button_big"><a href="#" class="link link_big">Забрать бесплатно!</a></div>
+				<div class="button button_big"><a href="#modal" class="link link_big">Забрать бесплатно!</a></div>
 				<p class="head__discount">
 					(+) Дополнительная 50% Скидка на Обучающий Курс
 				</p>
@@ -53,7 +57,7 @@
 				<img src="img/direct.jpg" alt="Скриншот ркламы Яндекс.Директ" class="direct__img">
 			</section>
 
-			<div class="button"><a href="#" class="link">Купить!</a></div>
+			<div class="button"><a href="#modal" class="link">Купить!</a></div>
 
 			<section class="polza">
 				<h3 class="polza__h3">
@@ -128,7 +132,7 @@
 				</div>
 			</section>
 
-			<div class="button"><a href="#" class="link">Купить за 270 руб!</a></div>
+			<div class="button"><a href="#modal" class="link">Купить за 270 руб!</a></div>
 
 		</div>
 	</article>
@@ -211,7 +215,7 @@
 						</artical>
 					</div>
 				</div>
-				<div class="button"><a href="#" class="link">Купить за 270 руб!</a></div>
+				<div class="button"><a href="#modal" class="link">Купить за 270 руб!</a></div>
 			</div>
 	</section>
 
@@ -227,7 +231,7 @@
 				<p class="aboutme__p">
 					С контекстной рекламой подружился в 2009 году, но не с первого раза. В данный момент основной доход получает именно с контекстной рекламы, продвигая различные продукты и услуги в интернете.
 				</p>
-				<div class="button"><a href="#" class="link">Хочу познакомиться!</a></div>
+				<div class="button"><a href="#modal" class="link">Хочу познакомиться!</a></div>
 			</div>
 		</aside>	
 
@@ -242,7 +246,7 @@
 					<h4 class="more__h4">
 						Еще про Дениса Герасимова
 					</h4>
-					<div class="button buuton_left"><a href="#" class="link">Хочу познакомиться!</a></div>
+					<div class="button buuton_left"><a href="#modal" class="link">Хочу познакомиться!</a></div>
 				</div>
 			</div>
 		</aside>
@@ -259,16 +263,39 @@
 				</div>
 				<div class="foot__right">
 					<p class="foot__p">
-						<a href="" class="">
+						<a href="#modal2" class="foot__link">
 							Политика обработки персональных данных
 						</a>
 					</p>
 				</div>
 			</div>
 		</footer>
+
+		<div class="remodal" data-remodal-id="modal">
+		  <button data-remodal-action="close" class="remodal-close"></button>
+		  <h3 class="modal__h3">Заберите книгу</h3>
+		  <p class="modal__p">
+		    <img src="img/box.png" alt="Обложка" class="">
+		  </p>
+		  <form action="#" class="modal__form">
+		  	<input type="text" placeholder="Укажите имя" class="modal__input">
+		  	<input type="email" placeholder="Укажите почту" class="modal__input">
+		  	<input type="submit" placeholder="Получить!" class="modal__input modal__input_sub">
+		  </form>
+		</div>
+
+		<div class="remodal" data-remodal-id="modal2">
+		  <button data-remodal-action="close" class="remodal-close"></button>
+		  <h3 class="modal__h3">Политика конфеденциальности</h3>
+    	<p>Политика в отношении обработки персональных данных определяет основные принципы и правила по обработке персональных данных, которыми мы руководствуемся в нашей работе, а также в общении с клиентами, поставщиками и сотрудниками. Политика в отношении обработки персональных данных распространяется на всех наших сотрудников.</p> <p>При обработке персональных данных мы стремимся соблюдать требования законодательства Российской Федерации, в частности Федеральный закон № 152-ФЗ «О персональных данных», а также нормы и правила, установленные в нашей компании.</p> <p>Далее текст политики.</p> <p>Ваша конфиденциальность очень важна для нас. Мы хотим, чтобы ваша работа в интернете по возможности была максимально приятной и полезной, и вы совершенно спокойно использовали широчайший спектр информации, инструментов и возможностей, которые предлагает интернет.</p> <p>Личная информация пользователей, собранная при регистрации или подписке (или в любое другое время) преимущественно используется для подготовки продуктов или услуг. Личная информация не будет передана или продана третьим сторонам. Однако мы можем частично раскрывать личную информацию в особых случаях, описанных в "Согласии с рассылкой"</p> <p>С какой целью собираются эти данные</p> <p>Имя используется для обращения лично к вам, а ваш e-mail для отправки вам писем рассылок, новостей тренинга, полезных материалов, коммерческих предложений.</p> <p>Вы можете отказаться от получения писем рассылки и удалить из базы данных свои контактные данные в любой момент, кликнув на ссылку для отписки, присутствующую в каждом письме.</p> <p>Как эти данные используются</p> <p>На сайте используются куки (Cookies) и данные о посетителях сервиса Google Analytics и Яндекс.Метрика.</p> <p>При помощи этих данных собирается информация о действиях посетителей на сайте с целью улучшения его содержания, улучшения функциональных возможностей сайта и, как следствие, создания качественного контента и сервисов для посетителей.</p> <p>Вы можете в любой момент изменить настройки своего браузера так, чтобы браузер блокировал все файлы cookie или оповещал об отправке этих файлов. Учтите при этом, что некоторые функции и сервисы не смогут работать должным образом.</p> <p>Как эти данные защищаются</p> <p>Для защиты вашей личной информации мы используем разнообразные административные, управленческие и технические меры безопасности. Наша компания придерживается различных международных стандартов контроля, направленных на операции с личной информацией, которые включают определенные меры контроля по защите информации, собранной в интернете.</p> <p>Наших сотрудников обучают понимать и выполнять эти меры контроля, они ознакомлены с нашим уведомлением о конфиденциальности, нормами и инструкциями.</p> <p>Тем не менее, несмотря на то, что мы стремимся обезопасить вашу личную информацию, вы тоже должны принимать меры, чтобы защитить ее.</p> <p>Мы настоятельно рекомендуем вам принимать все возможные меры предосторожности во время пребывания в интернете.</p> <p>Организованные нами услуги и сайты предусматривают меры по защите от утечки, несанкционированного использования и изменения информации, которую мы контролируем. Несмотря на то, что мы делаем все возможное, чтобы обеспечить целостность и безопасность своей сети и систем, мы не можем гарантировать, что наши меры безопасности предотвратят незаконный доступ к этой информации хакеров сторонних организаций.</p> <p>Для связи с администратором сайта по любым вопросам вы можете написать письмо на e-mail: info@rek9.ru</p>
+		  <br>
+ 			<button data-remodal-action="cancel" class="remodal-cancel">Понятно</button>
+		</div>
+
 	<!-- Конец кода -->
 
 	<script src="bower/jquery/jquery.js"></script>
 	<script src="js/main.js"></script>
+	<script src="remodal/remodal.min.js"></script>
 </body>
 </html>
